--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
   border-radius: 1.2em;
   font-size: 50px;
 }
+.count-container {
+  background: url("/assets/dragonball.png");
+  background-size: 60% 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+#count {
+  color: #fff;
+}
 
 .container form {
   padding: 5rem;
