--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+  background: #2e4052;
+}
 .container {
   width: 600px;
   margin: 1.5em auto;
@@ -18,6 +21,9 @@
 
 .container form {
   padding: 2.5rem;
+  background: #ffc857;
+  box-shadow: 1px 1px 1px 1px #fff;
+  border-radius: 1em;
 }
 .container form h3 {
   margin: 0;
