--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body {
   backdrop-filter: blur(20px);
 
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
+  height: 100vh;
 }
 .container {
   width: 600px;
